# satisfactory-designer

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: static.yml
demo/: Cargo.toml  index.html
src/: app.rs  buildings.rs  dropdown.rs  main.rs  node.rs  savegame.rs  util.rs  viewer.rs
src/buildings/: assembler.rs  blender.rs  constructor.rs  converter.rs  encoder.rs  foundry.rs  manufacturer.rs  merger.rs  miner.rs  oil_extractor.rs  packager.rs  particle_accelerator.rs  pipeline_junction.rs  refinery.rs  sink.rs  smelter.rs  splitter.rs  storage_container.rs  water_extractor.rs
tests/: simple_save_1_0_0.sav
