[package]
name = "satisfactory-designer"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = { version = "0.29" }
egui-snarl = { version = "0.5", features = ["serde"] }
eframe = { version = "0.29", features = ["serde", "persistence"] }
egui_extras = { version = "0.29", features = ["all_loaders"] }
syn = { version = "2.0", features = ["extra-traits"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
egui-modal = "0.5.0"
egui_dock = { version = "0.14", features = ["serde"] }
image = { version = "0.25", features = ["png"] }
petgraph = { version = "0.6.5", features = ["serde-1"] }
anyhow = "1.0.89"
bytes = "1.7.2"
flate2 = { version = "1.0.34", features = ["zlib"] }
derive_more = { version = "1.0.0", features = ["debug"] }
hex = "0.4.3"
zerocopy = { version = "0.8.0-alpha.26", features = ["derive"] }
log = "0.4.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"

[profile.release]
debug = true
