[package]
name = "satisfactory-designer-web"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "satisfactory-designer-web"
path = "../src/main.rs"

[dependencies]
egui = { version = "0.28" }
egui-snarl = { version = "0.4", features = ["serde"] }
egui-probe = { version = "0.5.1", features = ["derive"] }
eframe = { version = "0.28", features = ["serde", "persistence"] }
egui_extras = { version = "0.28", features = ["all_loaders"] }
syn = { version = "2.0", features = ["extra-traits"] }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26.3", features = ["derive"] }
image = { version = "0.25", features = ["png"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
